--- a/SupplierRanking/Views/Comprador/ExcluirConta.cshtml
+++ b/SupplierRanking/Views/Comprador/ExcluirConta.cshtml
@@ -10,17 +10,17 @@
     }
 </script>
 
-<div class="container-login100" style="width: 946px;height: 882px;background: #fff;position: absolute;left:435px;margin-top: 163px; box-shadow: 1px 1px 27px;">
+<div class="container-login100" style="width: 946px;height: 600px;background: #fff;position: absolute;left:435px;margin-top: 42px; box-shadow: 1px 1px 27px;">
 
     <div class="wrap-login100" style="background-color: white;position: absolute;left: 41%;">
 
         <h2 style="margin-left: -40px;">Excluir conta</h2>
         <br /><br />
 
-        <h2 style="margin-left: -40px;">Ao exlcuir sua conta todos os seus dados serão deletados do Supplier Ranking. </h2>
+        <h2 style="margin-left: -216px;">Ao exlcuir sua conta todos os seus dados serão deletados do Supplier Ranking. </h2>
         <br /><br />
 
-        <h2 style="margin-left: -40px;">Caso queira voltar para o nosso sistema basta se cadastrar novamente para poder ter acesso ao sistema novamente. </h2>
+        <h2 style="margin-left: -225px;">Caso queira voltar para o nosso sistema basta se cadastrar novamente para poder ter acesso ao sistema novamente. </h2>
         <br /><br />
 
 
@@ -32,7 +32,7 @@
 
 
             <br /> <br />
-            <button type="submit" style="margin-top: -62px;background: #166083;" onclick="mensagem()" class="btn btn-info btn-lg" id="btnExcluir">Excluir !</button>
+            <button type="submit" style="margin-top: -62px;background: #166083;" onclick="mensagem()" class="btn btn-info btn-lg" id="btnExcluir">Excluir</button>
         </form>
     </div>
 </div>
