--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -45,7 +45,7 @@
             <section style=" width: 2000px;height: 104px;background: #0C496BE6;position: absolute;top: 0px;left:0px;">
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1000px;position:absolute;left: 19%;top:10px;">
-                    <form style="height: 52px;" action="../HomeLogada/Pesquisa" method="post">
+                    <form style="height: 52px;" action="/HomeLogada/Pesquisa" method="post">
                         <div class="container-fluid">
                             <!-- <button type="button" id="sidebarCollapse" onmouse="menu()"class="btn btn-info">
                         <i class="fas fa-align-left"></i>
