Val - Review de todas as views de ranking e pesquisa, avaliação agora somente no perfil do fornecedor

--- a/SupplierRanking/Views/Avaliacao/UpdateComentario.cshtml
+++ b/SupplierRanking/Views/Avaliacao/UpdateComentario.cshtml
@@ -252,7 +252,7 @@
                         <h1 style="margin-bottom: -17px;margin-left: 344px;font-size: 23px;">Comentário</h1>
                         <input name="comentario" value="@Model.Comentario" style="margin-left: 161px;width: 463px;height: 30px;font-size: 20px;font-family: inherit;margin-top: 40px;border-radius: 100px;border: 1px solid gray;padding-left: 13px;box-shadow: 1px 1px 13px;" />
 
-                        <button type="submit" class="btn btn-info btn-lg ">Salvar</button>
+                        <button type="submit" class="btn btn-info btn-lg ">Atualizar Comentário</button>
                     </div>
 
                 </form>
