--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -17,204 +17,8 @@
         <ul class="row list-unstyled m-3">
             @foreach (var item in Model)
             {
-                <!-- Modal Avaliação -->
-                <div id="myModal2" class="modal">
+                <!-- Modal Avaliação estava aqui -->
 
-                        <!-- Modal content -->
-                        <div style="width: 835px;height: 600px;" class="modal-content">
-                            <span class="close-avaliacao">&times;</span>
-
-
-
-
-                            
-                            
-
-                            <form method="post" action="/Avaliacao/CadastrarAvaliacao" >
-
-                             <h3 style="margin-top: -10px;margin-bottom: -5px;">Entrega</h3>
-
-                                 <div class="rating" style="width: 30px;margin-top: -31px;margin-bottom: -49px;" >
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-                                </div>
-
-                             <h3>Qualidade</h3>
-
-                                <div class="rating" style="width: 30px;margin-bottom: -49px;">
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                              <h3>Atendimento</h3>
-
-                                 <div class="rating" style="width: 30px;margin-bottom: -49px;" >
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                              <h3>Preço</h3>
-
-                                  <div class="rating" style="width: 30px;margin-bottom: -49px;">
-
-                                    <label>
-                                        <input type="radio" name="preco" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="preco" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="preco" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="preco" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="preco" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                              <h3>Satisfação</h3>
-                                <div class="rating" style="width: 30px;margin-bottom: -49px;">
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position: relative;top: -239px;">
-                                    <h1 style="margin-left: 344px;font-size: 23px;margin-bottom: -403px;margin-top: 341px;">Comentário</h1>
-                                    <br />
-                                    <input id="cnpj" name="cnpj_fornecedor" value="@item.Cnpj" style="font-size: 10px;visibility: hidden;" />
-                                    <textarea name="comentario" style="margin-left: 161px;width:463px;height:77px;font-size:18px; resize:none; line-height:20px" ></textarea>
-                                    <input name="cnpj_fornecedor" value="@item.Cnpj" style="font-size: 10px; visibility:hidden"/>
-
-                                    <button style="margin-left: 656px;margin-top: -46px;" type="submit" class="btn btn-info btn-lg ">Salvar</button>
-                                </div>
-
-                            </form>
-
-                        </div>
-
-                    </div>
 
                 if (item.Plano.Equals("P"))
                 {
@@ -302,13 +106,19 @@
                             </div>
 
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                @if (Session["UserFornecedor"] == null)
+                                @if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
                                 {
-                                    @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                    <button id="@item.Cnpj" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
-          
+                                    <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    </a>
                                 }
-                                <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                                else
+                                {
+                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/iconecor.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    </a>
+                                }
                             </div>
                         </div>
 
@@ -366,15 +176,19 @@
                             </div>
 
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                @if (Session["UserFornecedor"] == null)
+                                @if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
                                 {
-                                    @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                    <button id="@item.Cnpj" name="cnpj_fornecedor" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
-                                    
-
-
+                                    <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    </a>
                                 }
-                                <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                                else
+                                {
+                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/iconecor.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    </a>
+                                }
                             </div>
 
                         </div>
@@ -387,9 +201,6 @@
 
         </ul>
         
-        <!-- Modal -->
-        
-
     </div>
 
 </div>
