--- a/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
@@ -19,196 +19,6 @@
             {
                 if (item.Plano.Equals("P"))
                 {
-                    <div id="myModal2" class="modal">
-
-                        <!-- Modal content -->
-                        <div style="width: 835px;height: 600px;" class="modal-content">
-                            <span class="close-avaliacao">&times;</span>
-
-                            <h3>Entrega</h3>
-                            <h3>Qualidade</h3>
-                            <h3>Atendimento</h3>
-                            <h3>Preço</h3>
-                            <h3>Satisfação</h3>
-
-                            <form method="post" action="../Avaliacao/CadastrarAvaliacao" class="rating">
-
-                                <div style="position: relative;top: -27.5rem;left: 21%;">
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="entrega" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position:relative;top: -27.8rem;left: 21%;">
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="qualidade" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position: relative;top: -28.8rem;left: 21%;">
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="atendimento" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position: relative;top: -29.8rem;left: 21%;">
-
-                                    <label>
-                                        <input type="radio" name="preco" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="preco" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="preco" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="preco" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="preco" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position: relative;top: -29.8rem;left: 21%;">
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="1" />
-                                        <span class="icon">★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="2" />
-                                        <span class="icon">★★</span>
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="3" />
-                                        <span class="icon">★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="4" />
-                                        <span class="icon">★★★★</span>
-                                    </label>
-
-
-                                    <label>
-                                        <input type="radio" name="satisfacao" value="5" />
-                                        <span class="icon">★★★★★</span>
-                                    </label>
-
-
-                                </div>
-
-                                <div style="position: relative;top: -312px;">
-                                    <h1 style="margin-bottom: -48px;margin-left: 344px;font-size: 23px;">Comentário</h1>
-                                    <br />
-                                    <textarea name="comentario" style="margin-left: 161px;width:463px;height:77px;font-size:18px; resize:none; line-height:20px" ></textarea>
-                                    @*<input  id="cnpj" name="cnpj_fornecedor" value="" style="font-size: 10px;" readonly="readonly" />*@
-
-                                    <button type="submit" class="btn btn-info btn-lg ">Salvar</button>
-                                </div>
-
-                            </form>
-
-                        </div>
-
-                    </div>
-
 
                     <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
                          box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;">
@@ -237,35 +47,37 @@
                             </div>
                             <div class="col-5">
                                 <div class="d-flex align-items-baseline pl-3">
-                                    <h4>
-                                        @item.Media
-                                    </h4>
+                    
                                     <div class="d-flex col-10 justify-content-around pl-5">
                                         <div>
-                                            <img />
+                                            <img src="~/Content/images/qualidade.png" height="40" width="40" style="background-color: white; border-radius:50%" />
                                             @item.Media_qualidade
                                         </div>
 
                                         <div>
-                                            <img />
+                                            <img src="~/Content/images/atendimento.png" height="40" width="40" style="background-color: white; border-radius:50%" />
                                             @item.Media_atendimento
                                         </div>
 
                                         <div>
-                                            <img />
+                                            <img src="~/Content/images/entrega.png" height="40" width="40" style="background-color: white; border-radius:50%" />
                                             @item.Media_entrega
                                         </div>
 
                                         <div>
-                                            <img />
+                                            <img src="~/Content/images/preço.png" height="40" width="40" style="background-color: white; border-radius:50%" />
                                             @item.Media_preco
                                         </div>
 
                                         <div>
-                                            <img />
+                                            <img src="~/Content/images/satisfacao.png" height="40" width="40" style="background-color: white; border-radius:50%" />
                                             @item.Media_satisfacao
                                         </div>
                                     </div>
+                                    <img src="~/Content/images/selo.png" height="120" width="150" style="position:absolute; margin-left:548px;margin-top:40px;" />
+                                    <h3 style="position:absolute;margin-left:617px;margin-top:75px;color:black;text-shadow:0px 0px 10px black">
+                                        @item.Media
+                                    </h3>
                                 </div>
                                 <div>
                                     <h2 style="font-weight: bold;">
@@ -275,7 +87,9 @@
                                 <div>
                                     @item.Nome_categoria
                                 </div>
+                                <img src="~/Content/images/premium2.png" height="90" width="70" style="margin-left:-235px; margin-top:-223px;" />
                             </div>
+
                             <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
 
                                 <h3>"@item.Slogan"</h3>
@@ -284,12 +98,10 @@
                                 </p>
                             </div>
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                @if (Session["UserFornecedor"] == null)
-                                {
-                                    @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                    <button id="@item.Cnpj" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
-                                }
-                                <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                                <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                    <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                </a>
                             </div>
                         </div>
 
@@ -347,16 +159,10 @@
                             </div>
 
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                @if (Session["UserFornecedor"] == null)
-                                {
-                                    @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                    <button id="@item.Cnpj" name="cnpj_fornecedor" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
-                                    
-
-
-
-                                }
-                                <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                                    <h5><a>Entre no </a><a style="text-decoration:underline; color:#d0a747" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">perfil </a><a>para avaliar</a> </h5>
+                                    <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                        <img src="~/Content/images/avaliar.png" height="60" width="60" style="margin-top: -3rem;" />
+                                    </a>
                             </div>
 
                         </div>
